// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`share url panel content render 1`] = `
<I18nProvider>
  <EuiForm
    className="osdShareContextMenu__finalPanel"
    data-test-subj="shareUrlForm"
  >
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      helpText={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Can't share as saved object until the {objectType} has been saved."
          id="share.urlPanel.canNotShareAsSavedObjectHelpText"
          values={
            Object {
              "objectType": "dashboard",
            }
          }
        />
      }
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Generate the link as"
          id="share.urlPanel.generateLinkAsLabel"
        />
      }
      labelType="label"
    >
      <EuiCompressedRadioGroup
        idSelected="snapshot"
        onChange={[Function]}
        options={
          Array [
            Object {
              "data-test-subj": "exportAsSnapshot",
              "id": "snapshot",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Snapshot"
                    id="share.urlPanel.snapshotLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                        id="share.urlPanel.snapshotDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
            Object {
              "data-test-subj": "exportAsSavedObject",
              "disabled": true,
              "id": "savedObject",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Saved object"
                    id="share.urlPanel.savedObjectLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                        id="share.urlPanel.savedObjectDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
          ]
        }
      />
    </EuiCompressedFormRow>
    <EuiCompressedFormRow
      data-test-subj="createShortUrl"
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFlexGroup
        gutterSize="none"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCompressedSwitch
            checked={false}
            data-test-subj="useShortUrl"
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Short URL"
                id="share.urlPanel.shortUrlLabel"
              />
            }
            onChange={[Function]}
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiIconTip
            content={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="We recommend sharing shortened snapshot URLs for maximum compatibility. Internet Explorer has URL length restrictions, and some wiki and markup parsers don't do well with the full-length version of the snapshot URL, but the short URL should work great."
                id="share.urlPanel.shortUrlHelpText"
              />
            }
            position="bottom"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiCompressedFormRow>
    <EuiSpacer
      size="m"
    />
    <EuiCopy
      afterMessage="Copied"
      anchorClassName="eui-displayBlock"
      textToCopy="http://localhost/"
    >
      <Component />
    </EuiCopy>
  </EuiForm>
</I18nProvider>
`;

exports[`share url panel content should enable saved object export option when objectId is provided 1`] = `
<I18nProvider>
  <EuiForm
    className="osdShareContextMenu__finalPanel"
    data-test-subj="shareUrlForm"
  >
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Generate the link as"
          id="share.urlPanel.generateLinkAsLabel"
        />
      }
      labelType="label"
    >
      <EuiCompressedRadioGroup
        idSelected="snapshot"
        onChange={[Function]}
        options={
          Array [
            Object {
              "data-test-subj": "exportAsSnapshot",
              "id": "snapshot",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Snapshot"
                    id="share.urlPanel.snapshotLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                        id="share.urlPanel.snapshotDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
            Object {
              "data-test-subj": "exportAsSavedObject",
              "disabled": false,
              "id": "savedObject",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Saved object"
                    id="share.urlPanel.savedObjectLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                        id="share.urlPanel.savedObjectDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
          ]
        }
      />
    </EuiCompressedFormRow>
    <EuiCompressedFormRow
      data-test-subj="createShortUrl"
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFlexGroup
        gutterSize="none"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCompressedSwitch
            checked={false}
            data-test-subj="useShortUrl"
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Short URL"
                id="share.urlPanel.shortUrlLabel"
              />
            }
            onChange={[Function]}
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiIconTip
            content={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="We recommend sharing shortened snapshot URLs for maximum compatibility. Internet Explorer has URL length restrictions, and some wiki and markup parsers don't do well with the full-length version of the snapshot URL, but the short URL should work great."
                id="share.urlPanel.shortUrlHelpText"
              />
            }
            position="bottom"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiCompressedFormRow>
    <EuiSpacer
      size="m"
    />
    <EuiCopy
      afterMessage="Copied"
      anchorClassName="eui-displayBlock"
      textToCopy="http://localhost/"
    >
      <Component />
    </EuiCopy>
  </EuiForm>
</I18nProvider>
`;

exports[`share url panel content should hide short url section when allowShortUrl is false 1`] = `
<I18nProvider>
  <EuiForm
    className="osdShareContextMenu__finalPanel"
    data-test-subj="shareUrlForm"
  >
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Generate the link as"
          id="share.urlPanel.generateLinkAsLabel"
        />
      }
      labelType="label"
    >
      <EuiCompressedRadioGroup
        idSelected="snapshot"
        onChange={[Function]}
        options={
          Array [
            Object {
              "data-test-subj": "exportAsSnapshot",
              "id": "snapshot",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Snapshot"
                    id="share.urlPanel.snapshotLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                        id="share.urlPanel.snapshotDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
            Object {
              "data-test-subj": "exportAsSavedObject",
              "disabled": false,
              "id": "savedObject",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Saved object"
                    id="share.urlPanel.savedObjectLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                        id="share.urlPanel.savedObjectDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
          ]
        }
      />
    </EuiCompressedFormRow>
    <EuiSpacer
      size="m"
    />
    <EuiCopy
      afterMessage="Copied"
      anchorClassName="eui-displayBlock"
      textToCopy="http://localhost/"
    >
      <Component />
    </EuiCopy>
  </EuiForm>
</I18nProvider>
`;

exports[`should show url param extensions 1`] = `
<I18nProvider>
  <EuiForm
    className="osdShareContextMenu__finalPanel"
    data-test-subj="shareUrlForm"
  >
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Generate the link as"
          id="share.urlPanel.generateLinkAsLabel"
        />
      }
      labelType="label"
    >
      <EuiCompressedRadioGroup
        idSelected="snapshot"
        onChange={[Function]}
        options={
          Array [
            Object {
              "data-test-subj": "exportAsSnapshot",
              "id": "snapshot",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Snapshot"
                    id="share.urlPanel.snapshotLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="Snapshot URLs encode the current state of the {objectType} in the URL itself. Edits to the saved {objectType} won't be visible via this URL."
                        id="share.urlPanel.snapshotDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
            Object {
              "data-test-subj": "exportAsSavedObject",
              "disabled": false,
              "id": "savedObject",
              "label": <EuiFlexGroup
                gutterSize="none"
                responsive={false}
              >
                <EuiFlexItem
                  grow={false}
                >
                  <Memo(MemoizedFormattedMessage)
                    defaultMessage="Saved object"
                    id="share.urlPanel.savedObjectLabel"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <EuiIconTip
                    content={
                      <Memo(MemoizedFormattedMessage)
                        defaultMessage="You can share this URL with people to let them load the most recent saved version of this {objectType}."
                        id="share.urlPanel.savedObjectDescription"
                        values={
                          Object {
                            "objectType": "dashboard",
                          }
                        }
                      />
                    }
                    position="bottom"
                  />
                </EuiFlexItem>
              </EuiFlexGroup>,
            },
          ]
        }
      />
    </EuiCompressedFormRow>
    <EuiCompressedFormRow
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      key="testExtension"
      labelType="label"
    >
      <TestExtension
        setParamValue={[Function]}
      />
    </EuiCompressedFormRow>
    <EuiCompressedFormRow
      data-test-subj="createShortUrl"
      describedByIds={Array []}
      display="rowCompressed"
      fullWidth={false}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      labelType="label"
    >
      <EuiFlexGroup
        gutterSize="none"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiCompressedSwitch
            checked={false}
            data-test-subj="useShortUrl"
            label={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Short URL"
                id="share.urlPanel.shortUrlLabel"
              />
            }
            onChange={[Function]}
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiIconTip
            content={
              <Memo(MemoizedFormattedMessage)
                defaultMessage="We recommend sharing shortened snapshot URLs for maximum compatibility. Internet Explorer has URL length restrictions, and some wiki and markup parsers don't do well with the full-length version of the snapshot URL, but the short URL should work great."
                id="share.urlPanel.shortUrlHelpText"
              />
            }
            position="bottom"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiCompressedFormRow>
    <EuiSpacer
      size="m"
    />
    <EuiCopy
      afterMessage="Copied"
      anchorClassName="eui-displayBlock"
      textToCopy="http://localhost/"
    >
      <Component />
    </EuiCopy>
  </EuiForm>
</I18nProvider>
`;
